--- a/_site.yml
+++ b/_site.yml
@@ -3,12 +3,14 @@ output_dir: "."
 navbar:
   title: "Home"
   right:
+    - icon: "Plotly"
+      href: plotly.html
     - icon: fa-envelope fa-lg
       href: mailto:<anw2158@cumc.columbia.edu>
     - icon: fa-github fa-lg
-      href: http://github.com/p8105_hw4_anw2158/
+      href: http://github.com/AungNWin/p8105_hw4_anw2158.github.io
     - icon: fa-instagram fa-lg
       href: http://instagram.com/ro_nn_ieyang/
 output:
   html_document:
-    theme: cerulean
+    theme: journal
