--- a/_site.yml
+++ b/_site.yml
@@ -3,8 +3,8 @@ output_dir: "."
 navbar:
   title: "Home"
   right:
-    - icon: "Plotly"
-      href: plotly.html
+    - text: "Dashboard"
+      href: dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<anw2158@cumc.columbia.edu>
     - icon: fa-github fa-lg
